// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PreupgradeReportList/helpers should detect if has remediations 1`] = `
<ListViewInfoItem
  className=""
  stacked={false}
>
  <Icon
    name="warning-triangle-o"
    type="pf"
  />
   Has Remediation
</ListViewInfoItem>
`;

exports[`PreupgradeReportList/helpers should return css class for high severity 1`] = `"severity-high"`;

exports[`PreupgradeReportList/helpers should return css class for low severity 1`] = `"severity-low"`;

exports[`PreupgradeReportList/helpers should return css class for medium severity 1`] = `"severity-medium"`;

exports[`PreupgradeReportList/helpers should return css class for unknown severity 1`] = `"severity-unknown"`;

exports[`PreupgradeReportList/helpers should return externals 1`] = `
Array [
  <Row
    bsClass="row"
    className="top-padded"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={1}
    >
      <strong>
        Links
      </strong>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={8}
    >
      <a
        href="https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/8/html-single/configuring_basic_system_settings/#using-python3"
      >
        Difference in Python versions and support in RHEL 8
      </a>
    </Col>
  </Row>,
]
`;

exports[`PreupgradeReportList/helpers should return remediations 1`] = `
Array [
  <Row
    bsClass="row"
    className="top-padded"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={1}
    >
      <strong>
        Hint
      </strong>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={8}
    >
      Please run "alternatives --set python /usr/bin/python3" after upgrade
    </Col>
  </Row>,
]
`;

exports[`PreupgradeReportList/helpers should return severity 1`] = `
<Row
  bsClass="row"
  className="top-padded"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={1}
  >
    <strong>
      Risk Factor
    </strong>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    md={8}
  >
    <Icon
      className="severity-high"
      name="resources-full"
      type="pf"
    />
     
    high
  </Col>
</Row>
`;

exports[`PreupgradeReportList/helpers should return summary 1`] = `
<Row
  bsClass="row"
  className="top-padded"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={1}
  >
    <strong>
      Summary
    </strong>
  </Col>
  <Col
    bsClass="col"
    className="pre-wrap"
    componentClass="div"
    md={8}
  >
    This checks difference in python versions
  </Col>
</Row>
`;

exports[`PreupgradeReportList/helpers should return tag info 1`] = `
Array [
  <Badge
    bsClass="badge"
    pullRight={false}
    variant="pill primary"
  >
    python
  </Badge>,
]
`;

exports[`PreupgradeReportList/helpers should return tags 1`] = `
<Row
  bsClass="row"
  className="top-padded"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={1}
  >
    <strong>
      Tags
    </strong>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    md={8}
  >
    <Badge
      bsClass="badge"
      pullRight={false}
      variant="pill primary"
    >
      python
    </Badge>
  </Col>
</Row>
`;

exports[`PreupgradeReportList/helpers should return title 1`] = `
<Row
  bsClass="row"
  componentClass="div"
>
  <Col
    bsClass="col"
    componentClass="div"
    md={1}
  >
    <strong>
      Title
    </strong>
  </Col>
  <Col
    bsClass="col"
    componentClass="div"
    md={8}
  >
    Difference in Python versions and support in RHEL 8
  </Col>
</Row>
`;
